GUI-6080 Fix icon not showing issue

--- a/assets/stylesheets/less/partials/icon.less
+++ b/assets/stylesheets/less/partials/icon.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/assets/fonts/icomoon.eot?qfkfdd');
-  src:  url('/assets/fonts/icomoon.eot?qfkfdd#iefix') format('embedded-opentype'),
-    url('/assets/fonts/icomoon.ttf?qfkfdd') format('truetype'),
-    url('/assets/fonts/icomoon.woff?qfkfdd') format('woff'),
-    url('/assets/fonts/icomoon.svg?qfkfdd#icomoon') format('svg');
+  src:  url('/assets/fonts/icomoon.eot?tzicq5');
+  src:  url('/assets/fonts/icomoon.eot?tzicq5#iefix') format('embedded-opentype'),
+    url('/assets/fonts/icomoon.ttf?tzicq5') format('truetype'),
+    url('/assets/fonts/icomoon.woff?tzicq5') format('woff'),
+    url('/assets/fonts/icomoon.svg?tzicq5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
